# FinTradeAgent

./: .gitignore  AGENTS.md  CI_FIXES_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Migration.md  README.md  ROADMAP.md  bugs.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.production.yml  pr-description.md  pyproject.toml  python.test.ts  tasks.md
.claude/: settings.local.json
.github/workflows/: e2e-tests.yml  integration-tests.yml
.run/: streamlit.run.xml
backend/: __init__.py  main.py  main_production.py  requirements.txt
backend/config/: production.py
backend/fin_trade/: cache.py
backend/middleware/: __init__.py  cache.py  performance.py  rate_limiter.py  security.py
backend/models/: agent.py  portfolio.py
backend/routers/: agents.py  analytics.py  portfolios.py  (+2 more)
docs/: API.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEVELOPER_GUIDE.md  DOCKER_DEPLOYMENT.md  DOCKER_TROUBLESHOOTING.md  ENVIRONMENT_CONFIGURATION.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_DEPLOYMENT.md  TROUBLESHOOTING.md  Testing.md  USER_GUIDE.md  WEBSOCKET.md  integration-tests-summary.md  langgraph_multi_agent_plan.txt
frontend/: index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
nginx/: nginx.conf
scripts/: backup.sh  build-production.sh  deploy.sh  dev-db-init.sql  docker-manager.sh  health-check.sh  lighthouse-test.js  migrate_isin_to_ticker.py  run_api_tests.sh  start-production.sh
tests/: __init__.py  conftest.py  test_agent_integration.py  test_agent_service.py  test_agents_api.py  test_analysis_node.py  test_analytics_api.py  test_attribution_service.py  test_comparison_service.py  test_execution_log.py  test_fx_service.py  test_generate_node.py  test_llm_provider.py  test_main_api.py  test_market_data_service.py  test_pending_trades_page.py  test_portfolio_detail.py  test_portfolio_service.py  test_portfolios_api.py  test_price_lookup.py  test_reflection_service.py  test_research_node.py  test_scheduler.py  test_security_service.py  test_stock_data_service.py  test_system_api.py  test_trades_api.py  test_validate_node.py
(+199 files in other folders)
